fix(rc-table-class): fixed row align of elements

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -46,6 +46,10 @@ thead {
   }
 }
 
+.rc-table-cell {
+  vertical-align: middle;
+}
+
 tbody {
   tr {
     background-color: var(--row);
